Refactor LinkCommandHandler